fix: ajuster l'alignement et la disposition des éléments dans la section principale

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -85,7 +85,6 @@ main {
 }
 
 .lien-projet {
-    margin-top: 10px;
     text-align: center;
 }
 
@@ -229,7 +228,9 @@ button{
         }
 
         main {
-            grid-template-columns: 1fr;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .slowgan {
             margin-top: 25%;
